--- a/style.css
+++ b/style.css
@@ -11,3 +11,32 @@ td {
 img {
     border: 0;
 }
+
+.wrapper{
+    width: 100%;
+    table-layout: fixed;
+    background-color: #cccccc;
+    padding-bottom: 60px;
+}
+
+.main {
+    background-color: #fff;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px;
+    border-spacing: 0;
+    font-family: sans-serif;
+    color: #171a1b;
+}
+
+.two-columns {
+    text-align: center;
+    font-size: 0;
+}
+.two-columns .column {
+    width: 100%;
+    max-width: 300px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+}
