--- a/style.css
+++ b/style.css
@@ -40,3 +40,25 @@ img {
     vertical-align: top;
     text-align: center;
 }
+.three-columns {
+    text-align: center;
+    font-size: 0px;
+    padding: 15px 0 25px;
+}
+.three-columns .column {
+    width: 100%;
+    max-width: 200px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+}
+
+.three-columns .padding {
+    padding: 15px;
+}
+
+.three-columns .content {
+    font-size: 15px;
+    line-height: 20px;
+    padding: 0 5px;
+}
