--- a/style.css
+++ b/style.css
@@ -85,3 +85,12 @@ img {
     border-radius: 5px;
     font-weight: bold;
 }
+
+.button-dark {
+    background-color: #171a1b;
+    color: #fff;
+    text-decoration: none;
+    padding: 12px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+}
